web-infras/parser/tests/fixtures/babel/core/uncategorised/454/output.txt
[SyntaxError]: return not in function (1,1)
1|return
 |^
